--- a/app/src/main/res/layout/fragment_schedules_list.xml
+++ b/app/src/main/res/layout/fragment_schedules_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SchedulesListFragment">
+    tools:context=".view.SchedulesListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
