--- a/app/src/main/res/navigation/esport_navigation.xml
+++ b/app/src/main/res/navigation/esport_navigation.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/esport_navigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/esport_navigation"
+    app:startDestination="@id/gamesListFragment">
 
+    <fragment
+        android:id="@+id/gamesListFragment"
+        android:name="com.example.esportapps_uts.view.GamesListFragment"
+        android:label="fragment_games_list"
+        tools:layout="@layout/fragment_games_list" >
+        <action
+            android:id="@+id/actionScheduleList"
+            app:destination="@id/schedulesListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/schedulesListFragment"
+        android:name="com.example.esportapps_uts.view.SchedulesListFragment"
+        android:label="fragment_schedules_list"
+        tools:layout="@layout/fragment_schedules_list" >
+        <action
+            android:id="@+id/actionProfile"
+            app:destination="@id/profileFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.example.esportapps_uts.view.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
