--- a/app/src/main/res/navigation/esport_navigation.xml
+++ b/app/src/main/res/navigation/esport_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/actionScheduleList"
             app:destination="@id/schedulesListFragment" />
+        <action
+            android:id="@+id/actionTeamList"
+            app:destination="@id/teamListFragment" />
     </fragment>
     <fragment
         android:id="@+id/schedulesListFragment"
@@ -28,4 +31,18 @@
         android:name="com.example.esportapps_uts.view.ProfileFragment"
         android:label="fragment_profile"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/teamListFragment"
+        android:name="com.example.esportapps_uts.view.TeamListFragment"
+        android:label="fragment_team_list"
+        tools:layout="@layout/fragment_team_list" >
+        <action
+            android:id="@+id/actionTeamDetail"
+            app:destination="@id/teamDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/teamDetailFragment"
+        android:name="com.example.esportapps_uts.view.TeamDetailFragment"
+        android:label="fragment_team_detail"
+        tools:layout="@layout/fragment_team_detail" />
 </navigation>
