--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/itemGameList"
+        android:icon="@drawable/baseline_videogame_asset_24"
+        android:title="What We Play"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/itemSchedule"
+        android:icon="@drawable/baseline_calendar_month_24"
+        android:title="Our Schedule"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/itemProfile"
+        android:icon="@drawable/baseline_theater_comedy_24"
+        android:title="Who We Are"
+        app:showAsAction="always" />
 </menu>
