--- a/app/src/main/res/layout/fragment_achievements.xml
+++ b/app/src/main/res/layout/fragment_achievements.xml
@@ -7,49 +7,49 @@
     android:layout_height="match_parent"
     tools:context=".view.AchievementsFragment">
 
-    <TextView
-        android:id="@+id/txtDes"
-        android:layout_width="334dp"
-        android:layout_height="216dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="220dp"
-        android:text="txtDes"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtGameName"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/txtGameName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
-        android:layout_marginEnd="328dp"
-        android:text="txtName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerAch" />
+        <ImageView
+            android:id="@+id/imgGame"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="372dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        <Spinner
+            android:id="@+id/spinYears"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_marginTop="50dp"
+            android:spinnerMode="dropdown" />
 
-    <Spinner
-        android:id="@+id/spinnerAch"
-        android:layout_width="355dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        <TextView
+            android:id="@+id/txtName"
+            android:layout_width="146dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="27dp"
+            android:layout_marginEnd="328dp"
+            android:text="Nama Game"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtAchievement"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="220dp"
+            android:text="Juara turnamen antar kota" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
