--- a/app/src/main/res/layout/schedules_list_item.xml
+++ b/app/src/main/res/layout/schedules_list_item.xml
@@ -18,27 +18,17 @@
 
             <TextView
                 android:id="@+id/txtMonth"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="22dp"
                 android:gravity="center"
                 android:text="SEP"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtDate" />
 
             <TextView
-                android:id="@+id/txtTeam"
-                android:layout_width="141dp"
-                android:layout_height="38dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Valo - Team A"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
                 android:id="@+id/txtEvent"
-                android:layout_width="200dp"
-                android:layout_height="38dp"
+                android:layout_width="194dp"
+                android:layout_height="45dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Regional Qualifer Valorant"
@@ -47,12 +37,36 @@
 
             <TextView
                 android:id="@+id/txtDate"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
+                android:layout_width="49dp"
+                android:layout_height="23dp"
                 android:gravity="center"
                 android:text="05"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/txtTeam"
+                android:layout_width="127dp"
+                android:layout_height="45dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Valo - Team A"
+                app:layout_constraintStart_toEndOf="@+id/txtEvent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btnSchDetail"
+                android:layout_width="38dp"
+                android:layout_height="33dp"
+                android:layout_marginTop="4dp"
+                android:textSize="5sp"
+                app:icon="@drawable/baseline_navigate_next_24"
+                app:iconGravity="start"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/txtTeam"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
