--- a/app/src/main/res/layout/schedules_list_item.xml
+++ b/app/src/main/res/layout/schedules_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,10 +56,11 @@
 
             <Button
                 android:id="@+id/btnSchDetail"
-                android:layout_width="38dp"
-                android:layout_height="33dp"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="4dp"
-                android:textSize="5sp"
+                android:gravity="center"
+                android:textSize="12sp"
                 app:icon="@drawable/baseline_navigate_next_24"
                 app:iconGravity="start"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +69,5 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
