--- a/app/src/main/res/layout/fragment_schedules_list.xml
+++ b/app/src/main/res/layout/fragment_schedules_list.xml
@@ -20,21 +20,19 @@
                 android:id="@+id/recView"
                 android:layout_width="400dp"
                 android:layout_height="659dp"
-                android:layout_marginStart="1dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:layout_editor_absoluteY="36dp" />
 
             <ProgressBar
                 android:id="@+id/progressLoad"
                 style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/recView"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
