--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -37,7 +37,7 @@
 
             <TextView
                 android:id="@+id/txtDescription"
-                android:layout_width="wrap_content"
+                android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
