--- a/app/src/main/res/navigation/esport_navigation.xml
+++ b/app/src/main/res/navigation/esport_navigation.xml
@@ -23,7 +23,7 @@
             android:id="@+id/action_itemGameList_to_itemProfile"
             app:destination="@id/itemProfile" />
         <action
-            android:id="@+id/action_itemGameList_to_loginFragment"
+            android:id="@+id/actionloginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
     <fragment
@@ -104,7 +104,7 @@
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_signUpFragment"
+            android:id="@+id/actionsignUpFragment"
             app:destination="@id/signUpFragment" />
         <action
             android:id="@+id/action_loginFragment_to_itemGameList"
@@ -116,7 +116,7 @@
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" >
         <action
-            android:id="@+id/action_signUpFragment_to_loginFragment"
+            android:id="@+id/actionloginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
